First commited as before_69417_rev3